OTUS.Pet.Education/SteelDesignerEngineer/k8s/steel_design_engineer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: steel-designer-engineer-service
  namespace: steel-design-engineer
  labels:
    app: steel-designer-engineer
spec:
  selector:
    app: steel-designer-engineer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
