OTUS.Pet.Education/SteelDesignerEngineer/k8s/steel_design_engineer_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steel-designer-engineer-ingress
  namespace: steel-design-engineer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "mytlschallenge"
spec:
  ingressClassName: traefik
  rules:
  - host: steel-designer-engineer.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: steel-designer-engineer-service
            port:
              number: 80
  tls:
  - hosts:
    - steel-designer-engineer.ru
    secretName: steel-designer-engineer-tls
