OTUS.Pet.Education/SteelDesignerEngineer/k8s/steel_design_engineer_ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: steel-designer-engineer-http
  namespace: steel-design-engineer
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`steel-designer-engineer.ru`)
      kind: Rule
      services:
        - name: steel-designer-engineer-service
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: steel-designer-engineer-https
  namespace: steel-design-engineer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`steel-designer-engineer.ru`)
      kind: Rule
      services:
        - name: steel-designer-engineer-service
          port: 80
  tls:
    secretName: steel-designer-engineer-tls
